Fix voucher card details alignment

--- a/idea/frontend/src/features/voucher/ui/voucher-card/voucher-card.module.scss
+++ b/idea/frontend/src/features/voucher/ui/voucher-card/voucher-card.module.scss
@@ -79,3 +79,12 @@
     }
   }
 }
+
+.body {
+  width: 90%;
+}
+
+.buttons {
+  display: flex;
+  gap: 10px;
+}
